package com.example.inventario_activos.domain.enums;

public enum AssetStatus {
    AVAILABLE,
    ASSIGNED,
    MAINTENANCE,
    RETIRED
}
