@startuml
skinparam classAttributeIconSize 0

enum AssetStatus {
  AVAILABLE
  ASSIGNED
  MAINTENANCE
  RETIRED
}

class Category {
  - Long id
  - String name
  - String code
}

class Asset {
  - Long id
  - String folio
  - String serialNumber
  - String model
  - AssetStatus status
  - BigDecimal acquisitionCost
  - LocalDate dateOfEntry
  - String location
  - String assignedTo
}

class AssetHistory {
  - Long id
  - AssetStatus oldStatus
  - AssetStatus newStatus
  - String justification
  - LocalDateTime changeDate
  - String changedBy
}

Category "1" -- "0..*" Asset : clasifica >
Asset "1" -- "0..*" AssetHistory : registra cambios >

note right of Asset::folio
  Formato: PREFIJO-YYYY-XXXX
  Ejemplo: LAP-2026-0001
end note

@enduml